--- a/.gitignore
+++ b/.gitignore
@@ -169,3 +169,7 @@ cython_debug/
 
 # PyPI configuration file
 .pypirc
+
+# To avoid pushing the virtual environment to version control updating gitignore with following commands
+.venv/
+.ipynb_checkpoints/
